[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gmaxxing"
version = "0.1.0"
description = "Boost your career. Increase LOC."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/wahmd/gmaxxing"

[tool.setuptools.packages.find]
where = ["."]
include = ["gmaxxing*"]
